调整项目目录